syntax = "proto3";

package kvraftpb;

enum Op {
    Unknown = 0;
    Put = 1;
    Append = 2;
    Get = 3;
}

/// Put or Append
message PutAppendRequest {
    string key = 1;
    string value = 2;
    // "Put" or "Append"
    Op op = 3;
    // You'll have to add definitions here.
    string client = 4;
    uint64 req_id = 5;
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string key = 1;
    // You'll have to add definitions here.
    string client = 4;
    uint64 req_id = 5;
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}
